在集群中增加节点Leader标识
